// protocol between application master and Gaia Controller

syntax = "proto2";

option java_multiple_files = true;
option java_package = "edu.umich.gaialib.gaiaprotos";
option java_outer_classname = "GaiaProtos";

// The Gaia Shuffle Service definition
service GaiaShuffle {
    rpc SayHello (HelloRequest) returns (HelloReply) {}

    // submit ShuffleInfo to Gaia
    rpc submitShuffleInfo (ShuffleInfo) returns (ShuffleInfoReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  required string name = 1;
}

// The response message containing the greetings
message HelloReply {
  required string message = 1;
}

// The request message containing the user's name.
message ShuffleInfo {
    message MapperInfo {
        required string mapperID = 1;
        required string mapperIP = 2;
    }

    message ReducerInfo {
        required string reducerID = 1;
        required string reducerIP = 2;
    }

    message FlowInfo {
        required string dataFilename = 1;
        required string mapAttemptID = 2;
        required string reduceAttemptID = 3;
        required int64 startOffSet = 4;
        required int64 flowSize = 5;
    }

    required string jobID = 1;
    required string username = 2;

    repeated MapperInfo mappers = 3;
    repeated ReducerInfo reducers = 4;
    repeated FlowInfo flows = 5;

}

// The response message containing the greetings
message ShuffleInfoReply {
    required string message = 1;
}
